syntax = "proto3";
package apipb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/deepfabric/busybee/pkg/pb/rpcpb/rpc.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_enum_prefix_all) = false;

// Event is process definition
message Event {
    uint32 userID     = 1;
    uint64 tenantID   = 2;
    uint64 workflowID = 3;
    repeated KV data  = 4 [(gogoproto.nullable) = false];
}

// KV custom KV data
message KV {
    bytes key   = 1;
    bytes value = 2;
}

// Notify notify message
message Notify {
    uint32 userID     = 1;
    bytes  crowd      = 2;
    uint64 tenantID   = 3;
    uint64 workflowID = 4;
    string fromStep   = 5;
    string fromAction = 6;
    string toStep     = 7;
    string toAction   = 8;
}

// Request the busybee request
message Request {
    uint64                          id            = 1  [(gogoproto.customname) = "ID"];
    rpcpb.Type                      type          = 2;
    rpcpb.SetRequest                set           = 3  [(gogoproto.nullable) = false];
    rpcpb.GetRequest                get           = 4  [(gogoproto.nullable) = false];
    rpcpb.DeleteRequest             delete        = 5  [(gogoproto.nullable) = false];
    rpcpb.BMCreateRequest           bmCreate      = 6  [(gogoproto.nullable) = false];
    rpcpb.BMAddRequest              bmAdd         = 7  [(gogoproto.nullable) = false];
    rpcpb.BMRemoveRequest           bmRemove      = 8  [(gogoproto.nullable) = false];
    rpcpb.BMClearRequest            bmClear       = 9  [(gogoproto.nullable) = false];
    rpcpb.BMRangeRequest            bmRange       = 10 [(gogoproto.nullable) = false];
    rpcpb.BMCountRequest            bmCount       = 11 [(gogoproto.nullable) = false];
    rpcpb.BMContainsRequest         bmContains    = 12 [(gogoproto.nullable) = false];
    rpcpb.QueueAddRequest           queueAdd      = 13 [(gogoproto.nullable) = false];
    rpcpb.QueueFetchRequest         queueFetch    = 14 [(gogoproto.nullable) = false];
    rpcpb.TenantInitRequest         tenantInit    = 15 [(gogoproto.nullable) = false];
    rpcpb.StartingInstanceRequest   startInstance = 16 [(gogoproto.nullable) = false];
    rpcpb.StopInstanceRequest       stopInstance  = 17 [(gogoproto.nullable) = false];
    rpcpb.InstanceCountStateRequest countInstance = 18 [(gogoproto.nullable) = false];
    rpcpb.InstanceCrowdStateRequest crowdInstance = 19 [(gogoproto.nullable) = false];
}

// Response the busybee response
message Response {
    uint64                    id              = 1 [(gogoproto.customname) = "ID"];
    rpcpb.Type                type            = 2;
    ErrorResponse             error           = 3 [(gogoproto.nullable) = false];
    rpcpb.BytesResponse       bytesResp       = 4 [(gogoproto.nullable) = false];
    rpcpb.BoolResponse        boolResp        = 5 [(gogoproto.nullable) = false];
    rpcpb.Uint64Response      uint64Resp      = 6 [(gogoproto.nullable) = false];
    rpcpb.Uint32SliceResponse uint32SliceResp = 7 [(gogoproto.nullable) = false];
    rpcpb.BytesSliceResponse  bytesSliceResp  = 8 [(gogoproto.nullable) = false];
}

// ErrorResponse error response 
message ErrorResponse {
    string error = 1;
}